--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -69,32 +69,37 @@
 
         </LinearLayout>
 
-
-        <Button
-            android:id="@+id/reset_password"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
             android:layout_marginBottom="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/round"
-            android:gravity="center"
-            android:text="Submit"
-            android:textColor="#fff" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/go_login"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="40dp"
-            android:gravity="center"
-            android:text="Return"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:layout_marginStart="40dp" />
+            <Button
+                android:id="@+id/reset_password"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/round"
+                android:gravity="center"
+                android:text="Submit"
+                android:textColor="#fff" />
+
+            <Button
+                android:id="@+id/go_login"
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/round"
+                android:gravity="center"
+                android:text="Return"
+                android:textColor="#fff" />
+        </LinearLayout>
 
     </LinearLayout>
 
