--- a/app/src/main/res/menu/main_dashboard.xml
+++ b/app/src/main/res/menu/main_dashboard.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/home"
-        android:title="Home"
+    <item android:id="@+id/homeMenu"
+        android:title="@string/homeMenu"
         android:icon="@drawable/ic_home"/>
 
-    <item android:id="@+id/cart"
-        android:title="Cart"
+    <item android:id="@+id/messages"
+        android:title="@string/messages"
         android:icon="@drawable/ic_bag"/>
 
 
 
-    <item android:id="@+id/order"
-        android:title="Order"
+    <item android:id="@+id/explore"
+        android:title="@string/explore"
         android:icon="@drawable/ic_order"/>
 
 
-    <item android:id="@+id/settings"
-        android:title="Settings"
+    <item android:id="@+id/settingsMenu"
+        android:title="@string/settings"
         android:icon="@drawable/ic_setting"/>
 </menu>
